# arc

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  ARC_PERFORMANCE_ANALYSIS.md  BASELINE_EVIDENCE.md  BREAKING_CHANGES_API_V1.md  DEPLOYMENT_FIX_SUMMARY.md  Dockerfile  Dockerfile.superset  INT64_TIMESTAMP_MIGRATION.md  LINE_PROTOCOL_OPTIMIZATION.md  Makefile  PARTITION_PRUNING_IMPLEMENTATION.md  QUERY_OPTIMIZATION.md  QUICK_DEPLOYMENT_CHECK.md  README.md  RELEASE_NOTES_2026.02.1.md  RELEASE_NOTES_2026.02.2.md  RELEASE_NOTES_2026.03.1.md  RELEASE_NOTES_2026.04.1.md  RELEASE_NOTES_2026.05.1.md  RELEASE_NOTES_2026.06.1.md  RELEASE_NOTES_2026.06.2.md  RELEASE_NOTES_2026.06.3.md  RELEASE_NOTES_2026.06.4.md  RELEASE_NOTES_2026.09.1.md  RELEASE_v25.11.2.md  SCHEMA_CACHE_OPTIMIZATION.md  SECURITY.md  SECURITY_FIXES.md  SIMPLIFICATION_RESULTS.md  STRUCTURE.md  TIMESTAMP_OPTIMIZATION.md  arc.conf  arc.toml  artifacthub-repo.yml  benchmark_connection_pool.py  benchmark_lightweight.py  benchmark_results_20251124_123802.json  (+22 more)
.claude/: CLAUDE.MD
.github/: FUNDING.yml
api/: auth.py  compaction_lock.py  compaction_routes.py  config.py  connection_pool.py  continuous_query_routes.py  database.py  delete_routes.py  duckdb_engine.py  duckdb_pool.py  duckdb_pool_simple.py  http_json_routes.py  line_protocol_routes.py  logging_config.py  logs_endpoint.py  main.py  models.py  monitoring.py  msgpack_routes.py  parquet_stats_filter.py  partition_pruner.py  plugin_system.py  query_cache.py  retention_routes.py  scheduler.py  startup_migration.py  statistics_validator.py  (+2 more)
(+569 files in other folders)
